# querymind

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/querymind/: __init__.py  engine.py  evaluator.py  guardrails.py  introspection.py  llm_provider.py  models.py  prompt_builder.py  schema_index.py  server.py  translator.py
app/web/: app.js  index.html  styles.css
data/: demo_ecommerce.sql  eval_questions.json
launch/: github_release_notes.md
notebooks/: eval_results.ipynb
scripts/: init_demo_db.py  run_eval.py
tests/: test_querymind.py
